--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -43,7 +43,7 @@ jobs:
     strategy:
       matrix:
         # TODO: (cclauss) add pypy3
-        python-version: [2.7, 3.5, 3.6, 3.7, 3.8]  # , pypy3]
+        python-version: [3.6, 3.7, 3.8]
     steps:
       - uses: actions/checkout@master
       - uses: actions/setup-python@master
